bug/jar file (#60)
* Use shade instead of jar

* Go back to pom.xml

* Use maven shade plugin

* Fix main class

* Add enable preview

* Update version

* Add a separate Main class to solve execution problem